# adventofcode

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  README.md  eslint.config.cjs  run.py  setup.cfg
.ci/: xargify.py
.github/workflows/: pre-commit.yaml
2015/01/: solution.py
2015/02/: solution.py
2015/03/: solution.py
2015/04/: solution.py
2015/05/: solution.py
2015/06/: solution.py
2015/07/: solution.py
2015/08/: solution.py
2015/09/: solution.py
2015/10/: solution.py
2015/11/: solution.py
2015/12/: input_prettyprinted  solution.py
2015/13/: solution.py
2015/14/: solution.py
2015/15/: package.yaml
2015/16/: package.yaml  stack.yaml
2015/17/: solution.py
2015/18/: package.yaml  solution.cabal
2015/19/: solution.py
2015/20/: Makefile  solution.py
2015/21/: package.yaml  stack.yaml
2015/22/: package.yaml
2015/23/: package.yaml  stack.yaml
2015/24/: stack.yaml
2015/25/: stack.yaml
2016/01/: solution.py
2016/02/: Cargo.toml
2016/03/: package.yaml  solution.cabal  stack.yaml
2016/04/: package.yaml  stack.yaml
2016/05/: solution.py
2016/06/: solution.py
2016/07/: solution.py
2016/08/: package.yaml  stack.yaml
2016/09/: package.yaml  stack.yaml
2016/10/: package.yaml  stack.yaml
2016/12/: package.yaml  stack.yaml
2016/13/: package.yaml  stack.yaml
2016/14/: Cargo.toml
2016/15/: Makefile  main.py
2016/16/: package.yaml
2016/17/: Cargo.toml
2016/18/: package.yaml
2016/19/: Makefile  solution.cxx
2016/20/: solution.py
2016/21/: package.yaml  stack.yaml
2016/22/: Makefile  solution.pl
2016/23/: package.yaml  stack.yaml
2016/24/: Cargo.toml
2016/25/: package.yaml  stack.yaml
2017/01/: solution.py
2017/02/: solution.py
2017/03/: solution.py
2017/04/: solution.py
2017/05/: solution.py
2017/06/: solution.py
2017/07/: package.yaml
2017/08/: package.yaml
2017/09/: package.yaml
2017/10/: solution.py
2017/11/: package.yaml
2017/12/: solution.pl
2017/13/: package.yaml
2017/14/: solution.py
2017/15/: package.yaml
2017/16/: package.yaml  stack.yaml
2017/17/: solution.py
2017/18/: stack.yaml
2017/19/: solution.py
2017/20/: solution.rb
2017/21/: .gitignore  Makefile  solution
2017/22/: solution.py
2017/24/: solution.pl
2017/25/: Makefile  main.py
2018/01/: package.yaml  stack.yaml
2018/02/: solution.py
2018/03/: package.yaml  stack.yaml
2018/04/: package.yaml
2018/05/: package.yaml
2018/06/: package.yaml
2018/07/: package.yaml  stack.yaml
2018/08/: package.yaml  stack.yaml
2018/10/: solution.py
2018/12/: package.yaml  (+1 more)
2019/15/: Cargo.toml
2019/15/src/: main.rs
2022/15/cpp/: CMakeLists.txt  parse_input.cxx  solution.cxx
2025/03/cpp/: CMakeLists.txt  main.cxx
(+506 files in other folders)
