[package]
name = "solution"
version = "0.1.0"
authors = ["narpfel <narpfel@gmx.de>"]
edition = "2018"

[features]
interactive = ["console", "itertools"]

[dependencies]
console = { version = "0", optional = true }
itertools = { version = "0", optional = true }

# TODO: Remove `rand` from `interactive` feature. (Currently, it is not
# possible to specify that a dependency is *not* needed for a specific
# feature.)
rand = "0"

[dependencies.intcode]
path = "../11/intcode"
