[package]
name = "solution"
version = "0.1.0"
authors = ["narpfel <narpfel@gmx.de>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1

[features]
interactive = ["console"]

[dependencies]
console = { version = "0", optional = true }
itertools = "0"

[dependencies.intcode]
path = "../11/intcode"
